fix more layout issues

--- a/src/scss/components/shared/NavBar.scss
+++ b/src/scss/components/shared/NavBar.scss
@@ -25,9 +25,7 @@
   min-height: 50px;
   transition: height 0.3s;
   overflow: hidden;
-  position: fixed;
-  top: 56px;
-  left: 0;
+  position: relative;
   z-index: 100;
   box-shadow: 0 1px 4px rgba(0,0,0,.16);
 }
