--- a/src/scss/utilities/base.scss
+++ b/src/scss/utilities/base.scss
@@ -43,7 +43,7 @@ body a {
 
 .mobile-container {
   width: 100%;
-  padding: 130px 20px;
+  padding: 20px;
   margin: 0 auto;
   box-sizing: border-box;
 } 
@@ -150,7 +150,7 @@ body a {
 .mobile-suite-banner {
   background-color: #073551;
   color: #ffffff;
-  position: fixed;
+  position: relative;
   top: 0;
   right: 0;
   left: 0;
